Docs: Fix missing margin after list

--- a/docs/public/styles/index.css
+++ b/docs/public/styles/index.css
@@ -568,6 +568,7 @@ h5:hover .anchor {
 .md ul {
 	list-style: disc;
 	margin-left: 1.25rem;
+	margin-bottom: 0.5rem;
 }
 
 .md a {
